# artoolkitx

./: .gitattributes  .gitignore  ChangeLog.txt  LICENSE.txt  Quick start.md  README.md  Release Notes.md
Examples/2d tracking example/Linux/: CMakeLists.txt
Examples/Square tracking example/Windows/: CMakeLists.txt
Source/: CMakeCache.txt  CMakeLists.txt  arRefineCorners.cpp  arRefineCorners.h  build.sh
Source/ARX/: ARController.cpp  ARPattern.cpp  ARTrackable.cpp  ARTrackable2d.cpp  ARTrackableMap.cpp  ARTrackableMultiSquare.cpp  ARTrackableMultiSquareAuto.cpp  ARTrackableNFT.cpp  ARTrackableSquare.cpp  ARTracker.cpp  ARTracker2d.cpp  ARTrackerNFT.cpp  ARTrackerSquare.cpp  ARVideoSource.cpp  ARVideoView.cpp  ARX_c.cpp  CMakeLists.txt  mapper.cpp  mapper.hpp  trackingSub.c  trackingSub.h
Source/ARX/AR/: CMakeLists.txt  ar3DCreateHandle.c  ar3DUtil.c  arCreateHandle.c  arDetectMarker.c  arDetectMarker2.c  arFilterTransMat.c  arGetLine.c  arGetMarkerInfo.c  arGetTransMat.c  arGetTransMatStereo.c  arImageProc.c  arLabeling.c  arMultiEditConfig.c  arMultiFreeConfig.c  arMultiGetTransMat.c  arMultiGetTransMatStereo.c  arMultiReadConfigFile.c  arPattAttach.c  arPattCreateHandle.c  arPattGetID.c  arPattLoad.c  arPattSave.c  arRefineCorners.cpp  arRefineCorners.h  arUtil.c  icpCalibStereo.c  icpCore.c  icpHandle.c  icpPoint.c  icpPointRobust.c  icpStereoHandle.c  icpStereoPoint.c  icpStereoPointRobust.c  icpUtil.c  mAlloc.c  mAllocDup.c  mAllocInv.c  mAllocMul.c  mAllocTrans.c  (+28 more)
Source/ARX/AR/arLabelingSub/: arLabelingPrivate.h  arLabelingSub.h  arLabelingSubDBIC.c  arLabelingSubDBRC.c  arLabelingSubDBZ.c  arLabelingSubDWIC.c  arLabelingSubDWRC.c  arLabelingSubDWZ.c  arLabelingSubEBIC.c  arLabelingSubEBRC.c  arLabelingSubEBZ.c  arLabelingSubEWIC.c  arLabelingSubEWRC.c  arLabelingSubEWZ.c
Source/ARX/AR2/: CMakeLists.txt  coord.c  featureMap.c  featureSet.c  handle.c  imageSet.c  jpeg.c  marker.c  matching.c  matching2.c  searchPoint.c  selectTemplate.c  surface.c  template.c  tracking.c  tracking2d.c  util.c
Source/ARX/ARG/: CMakeLists.txt  arg.c  arg_gl.c  arg_gl.h  arg_gl3.c  arg_gl3.h  arg_gles2.c  arg_gles2.h  arg_private.h  glStateCache2.c  mtx.c  shader_gl.c
Source/ARX/ARUtil/: CMakeLists.txt  android_system_property_get.c  file_utils.c  image_utils.cpp  ioapi.c  ioapi.h  log.c  nftw.c  profile.c  system.c  thread_sub.c  thread_sub_winrt.cpp  thread_sub_winrt.h  time.c
Source/ARX/ARUtil/uuid/: uuid_sha1.c  uuid_sha1.h
Source/ARX/ARVideo/: CMakeLists.txt  cparamSearch.c  cparamSearch.h  nxjson.c  nxjson.h  video.c  video2.c  videoAspectRatio.c  videoLuma.c  videoRGBA.c  videoSaveImage.c
Source/ARX/ARVideo/AVFoundation/: CMakeLists.txt  CameraVideo.h  CameraVideo.m  MovieVideo.h  MovieVideo.m  cparams.c  cparams.h  videoAVFoundation.h  videoAVFoundation.m  videoAVFoundationCameraVideoTookPictureDelegate.h
Source/ARX/ARVideo/Android/: CMakeLists.txt  camera_utils.cpp  camera_utils.h  sqlite3.h  videoAndroid.c  videoAndroid.cpp  videoAndroid.h  videoAndroidJNI.c  videoAndroidPrivate.h
Source/ARX/ARVideo/Buffer/: CMakeLists.txt  videoBuffer.c  videoBuffer.h
Source/ARX/ARVideo/Dummy/: CMakeLists.txt  videoDummy.c  videoDummy.h
Source/ARX/ARVideo/Emscripten/: CMakeLists.txt  videoEmscripten.c  videoEmscripten.h
Source/ARX/ARVideo/GStreamer/: CMakeLists.txt  videoGStreamer.c  videoGStreamer.h
Source/ARX/ARVideo/Image/: CMakeLists.txt  videoImage.c  videoImage.h
Source/ARX/ARVideo/Video4Linux2/: CMakeLists.txt  videoV4L2.c  videoV4L2.h
Source/ARX/ARVideo/WaveVR/: CMakeLists.txt  videoWaveVR.c  videoWaveVR.h
Source/ARX/ARVideo/Web/: CMakeLists.txt  videoWeb.c  videoWeb.h
Source/ARX/ARVideo/WindowsMediaCapture/: WindowsMediaCapture.cpp  WindowsMediaCapture.h  videoWinMC.cpp  videoWindowsMediaCapture.h
Source/ARX/KPM/: CMakeLists.txt  kpmFopen.c  kpmFopen.h  kpmHandle.cpp  kpmMatching.cpp  kpmPrivate.h  kpmRefDataSet.cpp  kpmResult.cpp  kpmUtil.cpp
Source/ARX/OCVT/: CMakeLists.txt  HarrisDetector.cpp  HarrisDetector.h  HomographyInfo.cpp  HomographyInfo.h  OCVConfig.cpp  OCVConfig.h  OCVFeatureDetector.cpp  OCVFeatureDetector.h  OCVUtils.h  PlanarTracker.cpp  TrackableInfo.h  TrackedPoint.cpp  TrackedPoint.h  TrackerVisualization.h  TrackingPointSelector.cpp  TrackingPointSelector.h
Source/ARXJ/ARXJProj/: build.gradle  settings.gradle
Source/Utilities/: CMakeLists.txt
Source/Utilities/_app template/: CMakeLists.txt
Source/Utilities/_tool template/: CMakeLists.txt
Source/Utilities/checkResolution/: CMakeLists.txt  checkResolution.c
Source/Utilities/check_id/: CMakeLists.txt  check_id.cpp
Source/Utilities/check_image_2d_tracking/: CMakeLists.txt  check_image_2d_tracking.cpp
Source/Utilities/check_live_2d_tracking/: CMakeLists.txt  check_live_2d_tracking.cpp
Source/Utilities/dispTexData/: CMakeLists.txt  dispTexData.cpp
Source/Utilities/genMarkerSet/: CMakeLists.txt  genMarkerSet.cpp
Source/Utilities/genTexData/: CMakeLists.txt  genTexData.c
Source/Utilities/image_database_2d/: CMakeLists.txt  image_database2d.cpp
Source/Utilities/mk_patt/: CMakeLists.txt  mk_patt.cpp
Source/artoolkitx.js/: ARX_additions.js  ARX_bindings.cpp  ARX_js.cpp  ARX_js.h  ARX_wasmLoader.js  CMakeLists.txt
Source/cmake/: FindOpenCV.cmake  FindOpenGL3.cmake  FindOpenGLES2.cmake  FindSDL2.cmake  android.toolchain.cmake  ios.toolchain.cmake  macos.toolchain.cmake  rpi.toolchain.cmake
Source/depends/: CMakeLists.txt
Source/packaging/: package.sh
Source/packaging/android/: bom
Source/packaging/emscripten/: bom  excludes
Source/packaging/ios/: Makefile  bom  excludes  template.dmg.bz2
Source/packaging/linux/: cpackArtoolkit-completeConfiguration.cmake  cpackArtoolkit-devConfiguration.cmake  cpackArtoolkit-examplesConfiguration.cmake  cpackArtoolkit-libConfiguration.cmake  cpackArtoolkit-utilsConfiguration.cmake  cpackConfiguration.cmake
Source/packaging/macos/: bom  excludes  template.dmg.bz2
Source/packaging/windows/: bom  excludes
Source/platform/android/: assert_ndk_version.sh
Source/platform/ios/: arx-ios-symbols-force-nonglobal.txt
(+4396 files in other folders)
