if(ARX_TARGET_PLATFORM_MACOS OR (ARX_TARGET_PLATFORM_LINUX AND NOT "${ARX_TARGET_PLATFORM_VARIANT}" STREQUAL "raspbian") OR ARX_TARGET_PLATFORM_WINDOWS)
    add_subdirectory("check_id")
    add_subdirectory("genMarkerSet")
    add_subdirectory("mk_patt")
    if(HAVE_NFT)
        add_subdirectory("checkResolution")
        add_subdirectory("genTexData")
        add_subdirectory("dispTexData")
    endif()
    if(HAVE_2D)
        add_subdirectory("image_database_2d")
        add_subdirectory("check_image_2d_tracking")
    endif()
endif()
